# ai

./: .gitignore  .golangci.yml  BITCOIN_ANALYSIS_README.md  BITCOIN_TOKENOMICS_SUMMARY.md  Dockerfile  LLM.md  Makefile  README.md  bitcoin_tokenomics_analysis.md  bitcoin_tokenomics_calculator.py  bitcoin_tokenomics_data.json  go.mod  test_bitcoin_calculations.py  visualize_bitcoin_tokenomics.py
.github/workflows/: ci.yml  desktop.yml  docker.yml  go.yml  release.yml
benchmarks/: cchain_block_benchmark_test.go  go.mod  go.sum  run_comparison.sh
cli/: cli.go
cmd/lux-ai/: main.go
cmd/lux-ai-miner/: main.go
cmd/lux-ai-node/: main.go
desktop/: index.html  package.json  pnpm-lock.yaml
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
docs/app/: global.css  layout.tsx  page.tsx
docs/components/: logo.tsx
docs/latex/: 01-introduction.tex  02-tokenomics.tex  03-proof-of-ai.tex  04-nvtrust.tex  05-difficulty.tex  06-payments.tex  07-multi-chain.tex  08-evm-contracts.tex  09-security.tex  10-conclusion.tex  11-zkproofs.tex  12-teleport-governance.tex  13-deployment.tex  main.aux  main.tex  main.toc  references.bib
pkg/aivm/: aivm.go  aivm_test.go
pkg/attestation/: attestation.go  attestation_test.go  nvtrust.go
pkg/cc/: capability.go  capability_test.go  rewards.go  rewards_test.go  scoring.go  scoring_test.go  tier.go  tier_test.go
pkg/miner/: miner.go  miner_test.go
(+20 files in other folders)
