[package]
name = "lux-ai-desktop"
version = "0.1.0"
description = "Lux AI Desktop - Mine AI tokens and chat"
authors = ["Lux Industries Inc"]
edition = "2021"
license = "MIT"

[lib]
name = "lux_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
